--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "version": "1.0.0",
   "main": "jest.test.js",
   "dependencies": {
-    "ansi-styles": "^4.3.0",
     "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
-    "argparse": "^1.0.10",
+    "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.2",
+    "argparse": "^1.0.10",
     "babel-jest": "^28.1.2",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^28.1.1",
@@ -22,8 +22,8 @@
     "braces": "^3.0.2",
     "browserslist": "^4.21.1",
     "bser": "^2.1.1",
-    "callsites": "^3.1.0",
     "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
     "camelcase": "^5.3.1",
     "caniuse-lite": "^1.0.30001365",
     "chalk": "^4.1.2",
@@ -31,14 +31,14 @@
     "ci-info": "^3.3.2",
     "cjs-module-lexer": "^1.2.2",
     "cliui": "^7.0.4",
-    "collect-v8-coverage": "^1.0.1",
     "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "convert-source-map": "^1.8.0",
-    "debug": "^4.3.4",
     "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
     "dedent": "^0.7.0",
     "deepmerge": "^4.2.2",
     "detect-newline": "^3.1.0",
@@ -47,15 +47,15 @@
     "emittery": "^0.10.2",
     "emoji-regex": "^8.0.0",
     "error-ex": "^1.3.2",
-    "escape-string-regexp": "^2.0.0",
     "escalade": "^3.1.1",
+    "escape-string-regexp": "^2.0.0",
     "esprima": "^4.0.1",
     "execa": "^5.1.1",
     "exit": "^0.1.2",
     "expect": "^28.1.1",
     "fast-json-stable-stringify": "^2.1.0",
-    "fill-range": "^7.0.1",
     "fb-watchman": "^2.0.1",
+    "fill-range": "^7.0.1",
     "find-up": "^4.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
@@ -64,15 +64,15 @@
     "get-package-type": "^0.1.0",
     "get-stream": "^6.0.1",
     "glob": "^7.2.3",
-    "graceful-fs": "^4.2.10",
     "globals": "^11.12.0",
+    "graceful-fs": "^4.2.10",
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
     "html-escaper": "^2.0.2",
     "human-signals": "^2.1.0",
-    "inflight": "^1.0.6",
-    "imurmurhash": "^0.1.4",
     "import-local": "^3.1.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "is-arrayish": "^0.2.1",
     "is-core-module": "^2.9.0",
@@ -82,8 +82,8 @@
     "is-stream": "^2.0.1",
     "isexe": "^2.0.0",
     "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-report": "^3.0.0",
     "istanbul-lib-instrument": "^5.2.0",
+    "istanbul-lib-report": "^3.0.0",
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.4",
     "jest-changed-files": "^28.0.2",
@@ -121,25 +121,25 @@
     "lines-and-columns": "^1.2.4",
     "locate-path": "^5.0.0",
     "lru-cache": "^6.0.0",
-    "makeerror": "^1.0.12",
     "make-dir": "^3.1.0",
+    "makeerror": "^1.0.12",
     "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.5",
     "mimic-fn": "^2.1.0",
     "minimatch": "^3.1.2",
     "ms": "^2.1.2",
-    "micromatch": "^4.0.5",
     "natural-compare": "^1.4.0",
     "node-int64": "^0.4.0",
     "node-releases": "^2.0.6",
     "normalize-path": "^3.0.0",
     "npm-run-path": "^4.0.1",
+    "once": "^1.4.0",
     "onetime": "^5.1.2",
     "p-limit": "^2.3.0",
     "p-locate": "^4.1.0",
     "p-try": "^2.2.0",
     "parse-json": "^5.2.0",
     "path-exists": "^4.0.0",
-    "once": "^1.4.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
@@ -182,6 +182,7 @@
     "tmpl": "^1.0.5",
     "to-fast-properties": "^2.0.0",
     "to-regex-range": "^5.0.1",
+    "ts-jest": "^28.0.5",
     "type-detect": "^4.0.8",
     "type-fest": "^0.21.3",
     "update-browserslist-db": "^1.0.4",
@@ -197,7 +198,7 @@
     "yargs-parser": "^21.0.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
